chore(release): publish
 - @napi-rs/cli@3.1.5-1
 - @napi-rs/triples@2.0.9-1
 - @napi-rs/wasm-runtime@1.0.3-1

--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -788,6 +788,10 @@ jobs:
         with:
           node-version: 22
           cache: 'yarn'
+      - name: Replace release name
+        uses: ./github/actions/replace-org-name
+        with:
+          shell: bash
       - name: Publish
         run: |
           yarn install --mode=skip-build
