--- a/wasm-runtime/package.json
+++ b/wasm-runtime/package.json
@@ -37,7 +37,7 @@
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "readable-stream": "^4.7.0",
-    "rollup": "^4.38.0",
+    "@bratel/rollup": "^4.50.0-4",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "tslib": "^2.8.1"
   },
